--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,6 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.18.2</version>
         </dependency>
+    </dependencies>
 
 </project>
